instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:15: error: not found: value doite
doite()
^